--- a/style.css
+++ b/style.css
@@ -499,6 +499,9 @@ form .search{
   height: 265px;
   border: 2px solid #F2F2F2;
   padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  padding-top: 0px;
 }
 section h3{
   margin-left: 9px;
