--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ nav li a{
 }
 .nav_item.inscription{
   font-weight: bold;
+  margin-right: 22px;
 }
 
 /* Recherche*/
@@ -235,6 +236,7 @@ section h3{
 }
 #hebergement .card-image{
   background-color: white;
+  border: 2px solid #F2F2F2;
   border-radius: 20px;
   padding-top: 3px;
   padding-left: 4px;
